--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="navbar">
+    <h3>Company</h3>
+    <ul>
+      <a href=""><li>Dashboard</li></a>
+      <a href=""><li>User Profile</li></a>
+      <a href=""><li>Maps</li></a>
+      <a href=""><li>Notifications</li></a>
+      <a href=""><li>Support</li></a>
+    </ul>
+  </div>
   
 
 
 
-  
+
 </body>
 </html>
