--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="navbar">
     <h3>Company</h3>
     <ul>
-      <a href=""><li>Dashboard</li></a>
-      <a href=""><li>User Profile</li></a>
-      <a href=""><li>Maps</li></a>
-      <a href=""><li>Notifications</li></a>
-      <a href=""><li>Support</li></a>
+      <a href="#"><li>Dashboard</li></a>
+      <a href="#"><li>User Profile</li></a>
+      <a href="#"><li>Maps</li></a>
+      <a href="#"><li>Notifications</li></a>
+      <a href="#"><li>Support</li></a>
     </ul>
   </div>
   
