--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="navbar">
     <h3>Company</h3>
     <ul>
-      <a href="#"><li>Dashboard</li></a>
+      <a href="#"><li class="dash"><span>Dashboard</span></li></a>
       <a href="#"><li>User Profile</li></a>
       <a href="#"><li>Maps</li></a>
       <a href="#"><li>Notifications</li></a>
