--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="navbar">
-    <h3>Company</h3>
+    <h2>Company</h2>
     <ul>
-      <a href="#"><li class="dash"><span>Dashboard</span></li></a>
+      <a href="#"><li class="dash"><svg height="20" viewBox="0 0 48 48" width="20" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h48v48h-48z" fill="none"/><path fill="white" d="M6 26h16v-20h-16v20zm0 16h16v-12h-16v12zm20 0h16v-20h-16v20zm0-36v12h16v-12h-16z"/></svg><span>Dashboard</span></li></a>
       <a href="#"><li>User Profile</li></a>
       <a href="#"><li>Maps</li></a>
       <a href="#"><li>Notifications</li></a>
