--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
   
   
     <div class="main">
-      <h2>Dashboard</h2>
+      <h2 class="dash_main">Dashboard</h2>
         <div class="container">
           <div><p>Used Space</p><h2 class ="main_gb">49/50 GB</h2>
           <hr>
           </div>
+          
           <div>2</div>
           <div>3</div>
         </div>
