--- a/index.html
+++ b/index.html
@@ -50,14 +50,50 @@
         </div>
         
 
-        <div class="container">
-        <div class="main_block">
-          <div class="grafick"><img class="main_grafick" src="images/graphics.svg" alt=""> </div>
-          <p class="main_used">Daily Sales</p><h2 class ="main_gb">55% increase in today sales</h2>
+        <div class="container2">
+        <div class="main_block2">
+          <div class="grafick green"><img class="main_grafick" src="images/graphics.svg" alt=""> </div>
+          <p class="main_used2">Daily Sales</p><p class ="main_gb2">55% increase in today sales</p>
           <hr>
           <p class="main_get"><img src="images/time.png" alt="">updated 4 minutes ago</p>
           </div>
+
+          <div class="main_block2">
+            <div class="grafick orenge"><img class="main_grafick" src="images/graphics.svg" alt=""> </div>
+            <p class="main_used2">Email Subscription</p><p class ="main_gb2">Last Campaing Performance</p>
+            <hr>
+            <p class="main_get"><img src="images/time.png" alt="">campaign sent 2 days ago</p>
+            </div>
+
+            <div class="main_block2">
+              <div class="grafick blue"><img class="main_grafick" src="images/graphics.svg" alt=""> </div>
+              <p class="main_used2">Daily Sales</p><p class ="main_gb2">55% increase in today sales</p>
+              <hr>
+              <p class="main_get"><img src="images/time.png" alt="">updated 4 minutes ago</p>
+              </div>
         </div>
+
+        <div class="container3">
+          <div class="main_block3">
+            <div class="tabl orenge">Task:  Bugs    Website    Server</div>
+            <p class="main_used2">Daily Sales</p><p class ="main_gb2">55% increase in today sales</p>
+            <hr>
+            <p class="main_get"><img src="images/time.png" alt="">updated 4 minutes ago</p>
+            </div>
+  
+            <div class="main_block3">
+              <div class="grafick_blue">Employees Stats <p class="new">New empliyees on 19th Semptember, 2019</p></div>
+              <div class="main_used3"><p class="id">ID</p><p class="id nameid"> Name</p> <p class="id">Salary</p><p class="id"> Country</p></div>
+              <hr>
+              <div class="main_get3"><p class="id1">1</p> <p class="id namei">Dakota Rice</p><p class="id"> $36.738</p> <p class="id">Niger</p></div>
+              <hr>
+              <div class="main_get3"><p class="id1">1</p> <p class="id namei">Dakota Rice</p><p class="id"> $36.738</p> <p class="id">Niger</p></div>
+              <hr>
+              <div class="main_get3"><p class="id1">1</p> <p class="id namei">Dakota Rice</p><p class="id"> $36.738</p> <p class="id">Niger</p></div>
+              <hr>
+              <div class="main_get3"><p class="id1">1</p> <p class="id namei">Dakota Rice</p><p class="id"> $36.738</p> <p class="id">Niger</p></div>
+              </div>
+          </div>
     </div>
     
   
