--- a/index.html
+++ b/index.html
@@ -75,10 +75,17 @@
 
         <div class="container3">
           <div class="main_block3">
-            <div class="tabl orenge">Task:  Bugs    Website    Server</div>
+            <div class="tabl orenge">Task:
+              <a href="#">Bugs</a>
+              <a href="#">Website</a>
+              <a href="#">Server</a>
+            </div>
             <p class="main_used2">Daily Sales</p><p class ="main_gb2">55% increase in today sales</p>
             <hr>
             <p class="main_get"><img src="images/time.png" alt="">updated 4 minutes ago</p>
+            <hr>
+            <p class="main_get"><img src="images/time.png" alt="">updated 4 minutes ago</p>
+            <hr>
             </div>
   
             <div class="main_block3">
