--- a/index.html
+++ b/index.html
@@ -76,16 +76,37 @@
         <div class="container3">
           <div class="main_block3">
             <div class="tabl orenge">Task:
-              <a href="#">Bugs</a>
-              <a href="#">Website</a>
-              <a href="#">Server</a>
+              <a class="tabl_img_bugs" href="#"> <img src="images/bug.svg" alt=""> Bugs</a>
+              <a class="tabl_img" href="#"><img src="images/web.svg" alt=""> Website</a>
+              <a class="tabl_img" href="#"><img src="images/cloud.svg" alt=""> Server</a>
             </div>
-            <p class="main_used2">Daily Sales</p><p class ="main_gb2">55% increase in today sales</p>
+            <div class="check">
+              <input type="checkbox" class="custom-checkbox" checked>
+              <p class="main_used2">Sing contract for "What are conference organizers afraid<br> of?"
+              </p>
+              <div class="images"><img src="images/edit.png" alt=""><img src="images/remove.png" alt=""></div>
+            </div>
             <hr>
-            <p class="main_get"><img src="images/time.png" alt="">updated 4 minutes ago</p>
+            <div class="check">
+              <input type="checkbox" class="custom-checkbox">
+              <p class="main_used2">Lines From Great Russian Literature? Or E-mails From<br>My Boss?"
+              </p>
+              <div class="images"><img src="images/edit.png" alt=""><img src="images/remove.png" alt=""></div>
+            </div>
             <hr>
-            <p class="main_get"><img src="images/time.png" alt="">updated 4 minutes ago</p>
+            <div class="check">
+              <input type="checkbox" class="custom-checkbox">
+              <p class="main_used2">Sing contract for "What are conference organizers afraid<br> of?"
+              </p>
+              <div class="images"><img src="images/edit.png" alt=""><img src="images/remove.png" alt=""></div>
+            </div>
             <hr>
+            <div class="check">
+              <input type="checkbox" class="custom-checkbox" checked>
+              <p class="main_used2">Sing contract for "What are conference organizers afraid<br> of?"
+              </p>
+              <div class="images"><img src="images/edit.png" alt=""><img src="images/remove.png" alt=""></div>
+            </div>
             </div>
   
             <div class="main_block3">
@@ -101,11 +122,13 @@
               <div class="main_get3"><p class="id1">1</p> <p class="id namei">Dakota Rice</p><p class="id"> $36.738</p> <p class="id">Niger</p></div>
               </div>
           </div>
+          <div class="futer">
+            <p class="fut"> ABOUT BLOG LICENSES</p>
+            <p class="fut2">2019 - made with love</p>
+          
+          </div>
     </div>
     
-  
-  
-  
 
  </section>
 </body>
