--- a/index.html
+++ b/index.html
@@ -71,36 +71,36 @@
         <div class="container3">
           <div class="main_block3">
             <div class="tabl orenge222">Task:
-              <a class="tabl_img_bugs" href="#"> <img src="images/bug.svg" alt=""> Bugs</a>
-              <a class="tabl_img" href="#"><img src="images/web.svg" alt=""> Website</a>
-              <a class="tabl_img" href="#"><img src="images/cloud.svg" alt=""> Server</a>
+              <a class="tabl_img_bugs" href="#"> <img class="edi" src="images/bug.svg" alt=""> Bugs</a>
+              <a class="tabl_img" href="#"><img class="edi" src="images/web.svg" alt=""> Website</a>
+              <a class="tabl_img" href="#"><img class="edi" src="images/cloud.svg" alt=""> Server</a>
             </div>
             <div class="check">
               <input type="checkbox" class="custom-checkbox" checked>
               <p class="main_used2">Sing contract for "What are conference organizers afraid<br> of?"
               </p>
-              <div class="images"><img src="images/edit.png" alt=""><img src="images/remove.png" alt=""></div>
+              <div class="images"><img class="edit" src="images/edit.png" alt=""><img class="edit" src="images/remove.png" alt=""></div>
             </div>
             <hr>
             <div class="check">
               <input type="checkbox" class="custom-checkbox">
               <p class="main_used2">Lines From Great Russian Literature? Or E-mails From<br>My Boss?"
               </p>
-              <div class="images"><img src="images/edit.png" alt=""><img src="images/remove.png" alt=""></div>
+              <div class="images"><img class="edit" src="images/edit.png" alt=""><img class="edit" src="images/remove.png" alt=""></div>
             </div>
             <hr>
             <div class="check">
               <input type="checkbox" class="custom-checkbox">
               <p class="main_used2">Sing contract for "What are conference organizers afraid<br> of?"
               </p>
-              <div class="images"><img src="images/edit.png" alt=""><img src="images/remove.png" alt=""></div>
+              <div class="images"><img class="edit" src="images/edit.png" alt=""><img class="edit" src="images/remove.png" alt=""></div>
             </div>
             <hr>
             <div class="check">
               <input type="checkbox" class="custom-checkbox" checked>
               <p class="main_used2">Sing contract for "What are conference organizers afraid<br> of?"
               </p>
-              <div class="images"><img src="images/edit.png" alt=""><img src="images/remove.png" alt=""></div>
+              <div class="images"><img class="edit" src="images/edit.png" alt=""><img class="edit" src="images/remove.png" alt=""></div>
              
             </div>
             </div>
