--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="container3">
           <div class="main_block3">
-            <div class="tabl orenge222">Task:
+            <div class="tabl orenge222"><p class="task">Task:</p>
               <a class="tabl_img_bugs" href="#"> <img class="edi" src="images/bug.svg" alt=""> Bugs</a>
               <a class="tabl_img" href="#"><img class="edi" src="images/web.svg" alt=""> Website</a>
               <a class="tabl_img" href="#"><img class="edi" src="images/cloud.svg" alt=""> Server</a>
