--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-  <label for="check">
-    <input type="checkbox" id="check">
-    <span></span>
-    <span></span>
-    <span></span>
-  </label>
-
   <section>
     <div class="navbar">
       <h2>Company</h2>
@@ -25,7 +17,7 @@
           <li class="dash"><svg height="20" viewBox="0 0 48 48" width="20" xmlns="http://www.w3.org/2000/svg">
               <path d="M0 0h48v48h-48z" fill="none" />
               <path fill="white" d="M6 26h16v-20h-16v20zm0 16h16v-12h-16v12zm20 0h16v-20h-16v20zm0-36v12h16v-12h-16z" />
-            </svg><span>Dashboard</span></li>
+            </svg>Dashboard</li>
         </a>
         <a href="http://127.0.0.1:5500/profile.html">
           <li class="user"><svg height="20" viewBox="0 0 48 48" width="20" xmlns="http://www.w3.org/2000/svg">
@@ -58,6 +50,12 @@
       </ul>
     </div>
     <div class="main2">
+      <label class="label" for="box">
+        <input class="input" type="checkbox" id="box">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
       <h2 class="dash_main">Dashboard</h2>
       <div class="container">
         <div class="main_block">
