--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,7 @@
             <path fill="white"
               d="M24 8c-4.42 0-8 3.58-8 8 0 4.41 3.58 8 8 8s8-3.59 8-8c0-4.42-3.58-8-8-8zm0 20c-5.33 0-16 2.67-16 8v4h32v-4c0-5.33-10.67-8-16-8z" />
             <path d="M0 0h48v48h-48z" fill="none" />
-          </svg><span class="span">User Profile</li>
+          </svg>User Profile</li>
       </a>
       <a href="#">
         <li class="user"><svg height="20" viewBox="0 0 48 48" width="20" xmlns="http://www.w3.org/2000/svg">
@@ -55,7 +55,13 @@
     </ul>
   </div>
   <div class="main">
-    <h2 class="dash_main">User Profile</h2>
+    <label class="label" for="box">
+      <input class="input" type="checkbox" id="box">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+    <h2 class="dash_main2">User Profile</h2>
 
     <section class="main_section">
       <div class="main_block233">
